[Refactor] 充值提現幣別單位修改

--- a/app/src/main/res/layout/fragment_withdraw.xml
+++ b/app/src/main/res/layout/fragment_withdraw.xml
@@ -82,7 +82,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/color_BBBBBB_333333"
             android:textSize="@dimen/textSize14sp"
-            tools:text="PHP" />
+            tools:text="₱" />
 
 
         <TextView
