--- a/app/src/main/res/navigation/my_favorite_navigation.xml
+++ b/app/src/main/res/navigation/my_favorite_navigation.xml
@@ -52,6 +52,9 @@
                 android:name="matchInfoList"
                 app:argType="org.cxct.sportlottery.network.odds.MatchInfo[]" />
         </action>
+        <action
+            android:id="@+id/action_myFavoriteFragment_self"
+            app:destination="@id/myFavoriteFragment" />
 
     </fragment>
 
@@ -75,6 +78,9 @@
         <argument
             android:name="matchInfoList"
             app:argType="org.cxct.sportlottery.network.odds.MatchInfo[]" />
+        <action
+            android:id="@+id/action_oddsDetailFragment_to_myFavoriteFragment"
+            app:destination="@id/myFavoriteFragment" />
     </fragment>
 
     <fragment
@@ -93,6 +99,9 @@
         <argument
             android:name="matchId"
             app:argType="string" />
+        <action
+            android:id="@+id/action_oddsDetailLiveFragment_to_myFavoriteFragment"
+            app:destination="@id/myFavoriteFragment" />
     </fragment>
 
 </navigation>
