--- a/app/src/main/res/navigation/publicity_navigation.xml
+++ b/app/src/main/res/navigation/publicity_navigation.xml
@@ -50,6 +50,9 @@
                 android:name="matchId"
                 app:argType="string" />
         </action>
+        <action
+            android:id="@+id/action_publicityFragment_self"
+            app:destination="@id/publicityFragment" />
     </fragment>
 
     <fragment
@@ -120,6 +123,9 @@
         <action
             android:id="@+id/action_oddsDetailFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_oddsDetailFragment_to_publicityFragment"
+            app:destination="@id/publicityFragment" />
     </fragment>
 
     <fragment
@@ -199,5 +205,8 @@
         <action
             android:id="@+id/action_oddsDetailLiveFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_oddsDetailLiveFragment_to_publicityFragment"
+            app:destination="@id/publicityFragment" />
     </fragment>
 </navigation>
