[Refactor] 貨幣單位修改，並且移至金額前面

--- a/app/src/main/res/layout/fragment_bet_list.xml
+++ b/app/src/main/res/layout/fragment_bet_list.xml
@@ -342,7 +342,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/tv_all_bet_count"
                     app:layout_constraintTop_toTopOf="@+id/title_all_bet"
-                    tools:text="0.000 RMB" />
+                    tools:text="₱ 0.000" />
 
                 <TextView
                     android:id="@+id/title_winnable_amount"
@@ -367,7 +367,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/title_winnable_amount"
                     app:layout_constraintTop_toTopOf="@+id/title_winnable_amount"
-                    tools:text="0.000 RMB" />
+                    tools:text="₱ 0.000" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
