--- a/app/src/main/res/layout/dialog_withdraw_log_detail.xml
+++ b/app/src/main/res/layout/dialog_withdraw_log_detail.xml
@@ -96,7 +96,7 @@
             android:textSize="@dimen/textSize14sp"
             app:layout_constraintBaseline_toBaselineOf="@id/wd_log_detail_amount_subtitle"
             app:layout_constraintStart_toEndOf="@id/wd_log_detail_amount_subtitle"
-            tools:text="1,000,000.00" />
+            tools:text="₱ 1,000,000.00" />
 
         <TextView
             android:id="@+id/wd_log_detail_handle_fee_subtitle"
@@ -117,7 +117,7 @@
             android:textSize="@dimen/textSize14sp"
             app:layout_constraintBaseline_toBaselineOf="@id/wd_log_detail_handle_fee_subtitle"
             app:layout_constraintStart_toEndOf="@id/wd_log_detail_handle_fee_subtitle"
-            tools:text="-50 RMB" />
+            tools:text="₱ -50" />
 
         <TextView
             android:id="@+id/wd_log_detail_commission_subtitle"
@@ -138,7 +138,7 @@
             android:textSize="@dimen/textSize14sp"
             app:layout_constraintBaseline_toBaselineOf="@id/wd_log_detail_commission_subtitle"
             app:layout_constraintStart_toEndOf="@id/wd_log_detail_commission_subtitle"
-            tools:text="-600 RMB" />
+            tools:text="₱ -600" />
 
         <TextView
             android:id="@+id/wd_log_detail_status_subtitle"
