--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -111,8 +111,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/margin_6"
                         android:layout_marginBottom="@dimen/margin_8"
-                        android:ellipsize="end"
-                        android:maxLines="2"
+                        android:layout_marginEnd="10dp"
                         android:textColor="@color/color_909090_666666"
                         android:textSize="@dimen/textSize13sp"
                         app:layout_constraintEnd_toStartOf="@id/tvOdds"
@@ -124,7 +123,7 @@
                         android:id="@+id/tvOdds"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginHorizontal="@dimen/margin_24"
+                        android:layout_marginEnd="24dp"
                         android:textColor="@color/color_317FFF_0760D4"
                         android:textSize="@dimen/margin_14"
                         android:textStyle="bold"
