--- a/app/src/main/res/layout/fragment_bet_list.xml
+++ b/app/src/main/res/layout/fragment_bet_list.xml
@@ -123,7 +123,7 @@
                         android:textSize="@dimen/textSize12sp"
                         android:textColor="@color/color_BBBBBB_333333"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@id/gray_line"
+                        app:layout_constraintEnd_toStartOf="@id/btn_delete_all"
                         app:layout_constraintTop_toTopOf="parent"
                         tools:text="9,875,241.000" />
 
