--- a/app/src/main/res/layout/itemview_outright_league_v4.xml
+++ b/app/src/main/res/layout/itemview_outright_league_v4.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     tools:ignore="spUsage,UnusedAttribute">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -11,8 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/color_141414_f3f3f3"
-        android:paddingVertical="10dp"
-        app:layout_constraintTop_toTopOf="parent">
+        android:paddingVertical="10dp">
 
         <TextView
             android:id="@+id/outright_league_name"
@@ -69,14 +69,11 @@
         android:id="@+id/outright_league_odd_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
         android:nestedScrollingEnabled="false"
         android:orientation="vertical"
         android:overScrollMode="never"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/outright_info_block"
         tools:itemCount="3"
         tools:listitem="@layout/itemview_outright_odd_v4" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
