--- a/app/src/main/res/layout/activity_my_favorite.xml
+++ b/app/src/main/res/layout/activity_my_favorite.xml
@@ -24,7 +24,7 @@
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@id/my_favorite_bottom_navigation"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/my_favorite_toolbar"
             app:navGraph="@navigation/my_favorite_navigation"
             tools:layout="@layout/fragment_my_favorite" />
