--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="notification_view_height">21dp</dimen>
     <dimen name="tool_bar_notification_height">52dp</dimen>
     <dimen name="bet_list_bar_height">48dp</dimen>
+    <dimen name="bottom_nav_bar_height">55dp</dimen>
 
     <dimen name="textSize7sp">7dp</dimen>
     <dimen name="textSize8sp">8dp</dimen>
