[feature] 調整新注單顯示和隱藏的邏輯

--- a/app/src/main/res/layout/activity_account_history.xml
+++ b/app/src/main/res/layout/activity_account_history.xml
@@ -55,7 +55,7 @@
 
         <include
             android:layout_width="match_parent"
-            android:layout_height="55dp"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             android:id="@+id/account_history_bottom_navigation"
             layout="@layout/view_bottom_navigation_sport" />
