--- a/app/src/main/res/layout/activity_my_favorite.xml
+++ b/app/src/main/res/layout/activity_my_favorite.xml
@@ -45,7 +45,7 @@
             android:id="@+id/my_favorite_bottom_navigation"
             layout="@layout/view_bottom_navigation_sport"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
+            android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent" />
 
         <!-- 投注單 -->
