--- a/app/src/main/res/layout/activity_game_publicity.xml
+++ b/app/src/main/res/layout/activity_game_publicity.xml
@@ -46,17 +46,17 @@
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toTopOf="@id/viewBottom"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/clToolbar"
             app:navGraph="@navigation/publicity_navigation"
             tools:layout="@layout/fragment_publicity" />
 
-        <View
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/viewBottom"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@color/color_191919_FCFCFC"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent" >
 
         <TextView
             android:id="@+id/tvRegister"
@@ -72,10 +72,10 @@
             android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textAllCaps="true"
             android:textSize="@dimen/textSize16sp"
-            app:layout_constraintBottom_toBottomOf="@id/viewBottom"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/tvLogin"
-            app:layout_constraintStart_toStartOf="@id/viewBottom"
-            app:layout_constraintTop_toTopOf="@id/viewBottom" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvLogin"
@@ -92,10 +92,11 @@
             android:textAllCaps="true"
             android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textSize="@dimen/textSize16sp"
-            app:layout_constraintBottom_toBottomOf="@id/viewBottom"
-            app:layout_constraintEnd_toEndOf="@id/viewBottom"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/tvRegister"
-            app:layout_constraintTop_toTopOf="@id/viewBottom" />
+            app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <org.cxct.sportlottery.ui.common.ServiceFloatingButton
             android:id="@+id/btn_floating_service"
@@ -112,7 +113,8 @@
             layout="@layout/view_bottom_navigation_sport"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="@id/viewBottom"/>
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <!-- 投注單 & 快捷投注單 -->
         <FrameLayout
