--- a/app/src/main/res/layout/fragment_bet_receipt.xml
+++ b/app/src/main/res/layout/fragment_bet_receipt.xml
@@ -29,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/margin_48"
             android:background="@color/color_191919_FCFCFC"
-            android:paddingStart="5dp"
+            android:paddingStart="8dp"
             android:paddingTop="5dp"
             android:paddingEnd="5dp"
             android:paddingBottom="5dp"
@@ -39,10 +39,10 @@
 
             <ImageView
                 android:id="@+id/iv_receipt"
-                android:layout_width="@dimen/margin_16"
-                android:layout_height="@dimen/margin_16"
-                android:layout_marginLeft="@dimen/margin_14"
-                android:src="@drawable/icon_recept"
+                android:layout_width="@dimen/margin_28"
+                android:layout_height="@dimen/margin_28"
+                android:padding="@dimen/margin_8"
+                android:src="@drawable/ic_arrow_gray"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -51,7 +51,7 @@
                 android:id="@+id/tv_bet_list_receipt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_14"
+                android:layout_marginLeft="@dimen/margin_4"
                 android:text="@string/bet_list_receipt"
                 android:textColor="@color/color_BBBBBB_333333"
                 android:textSize="@dimen/textSize14sp"
@@ -86,12 +86,12 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/margin_4"
-                android:text="RMB"
                 android:textColor="@color/color_BBBBBB_333333"
                 android:textSize="@dimen/textSize14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/tv_balance"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="₱" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
