[feature] 加入 addOffsetListenerForBottomNavBar 處理包含 AppBarLayout 的頁面

--- a/app/src/main/res/layout/fragment_odds_detail.xml
+++ b/app/src/main/res/layout/fragment_odds_detail.xml
@@ -33,6 +33,7 @@
             app:srlEnablePureScrollMode="true">
 
             <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/app_bar_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:elevation="0dp">
