--- a/app/src/main/res/layout/fragment_odds_detail_live.xml
+++ b/app/src/main/res/layout/fragment_odds_detail_live.xml
@@ -31,6 +31,7 @@
             app:srlEnablePureScrollMode="true">
 
             <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/app_bar_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:elevation="0dp">
