--- a/app/src/main/res/layout/activity_timezone.xml
+++ b/app/src/main/res/layout/activity_timezone.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_191919_FCFCFC"
+    android:background="@color/color_141414_F3F4F5"
     android:orientation="vertical"
     android:clickable="true"
     android:focusable="true"
@@ -14,44 +14,36 @@
 
     <include layout="@layout/view_base_tool_bar_no_drawer"/>
 
-
-    <RadioGroup
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/margin_34"
+        android:gravity="center_vertical"
+        android:background="@drawable/bg_white_radius_18"
+        android:layout_marginHorizontal="@dimen/margin_12"
+        android:layout_marginVertical="@dimen/margin_10"
+        android:paddingHorizontal="@dimen/margin_10">
+       <ImageView
+           android:layout_width="wrap_content"
+           android:layout_height="18dp"
+           android:adjustViewBounds="true"
+           android:src="@drawable/ic_search1"/>
+        <EditText
+            android:id="@+id/et_search"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:paddingLeft="@dimen/margin_10"
+            android:background="@null"
+            android:singleLine="true"
+            android:textColor="@color/color_7F7F7F_999999"
+            android:textSize="12sp"
+            android:hint="请输入地区"/>
+    </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="vertical">
-
-        <RadioButton
-            android:id="@+id/rb_day_mode"
-            android:layout_width="match_parent"
-            android:layout_height="54dp"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawablePadding="10dp"
-            android:paddingStart="20dp"
-            android:text="@string/day_mode"
-            android:checked="true"
-            android:textColor="@color/selector_game_filter_btn_text"
-            android:textSize="@dimen/textSize14sp" />
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@drawable/divider_color_gray_light2"/>
-        <RadioButton
-            android:id="@+id/rb_night_mode"
-            android:layout_width="match_parent"
-            android:layout_height="54dp"
-            android:layout_weight="1"
-            android:button="@null"
-            android:drawablePadding="10dp"
-            android:paddingStart="20dp"
-            android:text="@string/night_mode"
-            android:textColor="@color/selector_game_filter_btn_text"
-            android:textSize="@dimen/textSize14sp" />
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@drawable/divider_color_gray_light2"/>
-    </RadioGroup>
-
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/item_timezone"
+        tools:itemCount="6"/>
 </LinearLayout>
