--- a/app/src/main/res/layout/home_game_card_v2.xml
+++ b/app/src/main/res/layout/home_game_card_v2.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cl_card"
-    android:layout_width="wrap_content"
+    android:layout_width="@dimen/margin_84"
     android:layout_height="90dp"
     android:background="@color/color_141414_FCFCFC"
     android:minWidth="84dp"
@@ -33,6 +33,8 @@
         android:text="@string/basketball"
         android:textColor="@color/color_BBBBBB_333333"
         android:textSize="@dimen/textSize14sp"
+        android:maxLines="1"
+        android:ellipsize="end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_icon" />
