--- a/app/src/main/res/layout/itemview_sport_type_v6.xml
+++ b/app/src/main/res/layout/itemview_sport_type_v6.xml
@@ -3,10 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cl_card"
-    android:layout_width="wrap_content"
-    android:layout_height="90dp"
+    android:layout_width="@dimen/margin_84"
+    android:layout_height="88dp"
     android:background="@color/color_141414_FCFCFC"
-    android:minWidth="84dp"
     tools:context=".ui.game.home.HomeGameCard"
     tools:ignore="SpUsage">
 
@@ -14,9 +13,7 @@
         android:id="@+id/sport_type_img"
         android:layout_width="@dimen/margin_40"
         android:layout_height="@dimen/margin_40"
-        android:layout_marginStart="5dp"
         android:layout_marginTop="21dp"
-        android:layout_marginEnd="5dp"
         android:contentDescription="@null"
         android:src="@drawable/ic_home_football"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,12 +26,12 @@
         android:id="@+id/sport_type_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginTop="3dp"
         android:text="@string/basketball"
         android:textColor="@color/color_BBBBBB_333333"
         android:textSize="@dimen/textSize14sp"
+        android:ellipsize="end"
+        android:maxLines="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/sport_type_img" />
@@ -43,9 +40,8 @@
         android:id="@+id/sport_count_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="7dp"
-        android:layout_marginEnd="7dp"
-        android:includeFontPadding="false"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="6dp"
         android:maxLines="1"
         android:textColor="@color/color_909090_666666"
         android:textSize="@dimen/textSize12sp"
