--- a/app/src/main/res/layout/itemview_league_odd_v5.xml
+++ b/app/src/main/res/layout/itemview_league_odd_v5.xml
@@ -61,7 +61,9 @@
         app:layout_constraintEnd_toEndOf="@id/guide_content"
         app:layout_constraintStart_toStartOf="@id/guide_game_start"
         app:layout_constraintBottom_toBottomOf="@id/guide_game_top"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"
+        tools:visibility="visible">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -120,6 +122,18 @@
             tools:visibility="visible" />
 
     </LinearLayout>
+
+    <include
+        android:id="@+id/content_baseball_status"
+        layout="@layout/content_baseball_status"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:gravity="center_vertical"
+        app:layout_constraintBottom_toBottomOf="@id/guide_game_top"
+        app:layout_constraintEnd_toEndOf="@id/guide_content"
+        app:layout_constraintStart_toStartOf="@id/guide_game_start"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="visible"/>
 
     <TextView
         android:id="@+id/league_odd_match_cards_home"
