--- a/app/src/main/res/layout/home_game_table_item_4.xml
+++ b/app/src/main/res/layout/home_game_table_item_4.xml
@@ -60,6 +60,20 @@
         tools:text="1"
         tools:visibility="visible" />
 
+    <ImageView
+        android:id="@+id/ic_attack_h"
+        android:layout_width="2dp"
+        android:layout_height="14dp"
+        android:layout_marginEnd="@dimen/margin_8"
+        android:src="@drawable/ic_baseball_attack"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/tv_game_score_home"
+        app:layout_constraintEnd_toStartOf="@id/tv_game_score_home"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_game_score_home"
+        tools:visibility="visible" />
+
     <TextView
         android:id="@+id/tv_game_score_home"
         android:layout_width="34dp"
@@ -134,6 +148,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_game_score_away"
         tools:text="1"
+        tools:visibility="visible" />
+
+    <ImageView
+        android:id="@+id/ic_attack_c"
+        android:layout_width="2dp"
+        android:layout_height="14dp"
+        android:layout_marginEnd="@dimen/margin_8"
+        android:src="@drawable/ic_baseball_attack"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@id/tv_game_score_away"
+        app:layout_constraintEnd_toStartOf="@id/tv_game_score_away"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_game_score_away"
         tools:visibility="visible" />
 
     <TextView
