--- a/app/src/main/res/layout/home_highlight_item.xml
+++ b/app/src/main/res/layout/home_highlight_item.xml
@@ -173,6 +173,7 @@
             android:layout_height="14dp"
             android:layout_marginStart="10dp"
             android:contentDescription="@null"
+            android:visibility="gone"
             android:src="@drawable/ic_price_v4" />
 
         <TextView
