--- a/app/src/main/res/layout/view_toolbar_live.xml
+++ b/app/src/main/res/layout/view_toolbar_live.xml
@@ -89,11 +89,13 @@
             android:layout_height="24dp"
             android:layout_marginEnd="20dp"
             android:padding="2dp"
-            android:src="@drawable/ic_icon_game_live_golf_selected"
+            android:src="@drawable/selector_game_schedule"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/iv_statistics"
             app:layout_constraintStart_toEndOf="@id/iv_play"
             app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible"
              />
 
         <ImageView
