--- a/app/src/main/res/layout/activity_timezone.xml
+++ b/app/src/main/res/layout/activity_timezone.xml
@@ -35,15 +35,25 @@
             android:paddingLeft="@dimen/margin_10"
             android:background="@null"
             android:singleLine="true"
-            android:textColor="@color/color_7F7F7F_999999"
+            android:textColor="@color/color_939393_333333"
+            android:textColorHint="@color/color_7F7F7F_999999"
             android:textSize="12sp"
             android:hint="请输入地区"/>
     </LinearLayout>
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_list"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_timezone"
-        tools:itemCount="6"/>
+        android:layout_height="match_parent">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/item_timezone"
+            tools:itemCount="6"/>
+        <include
+            android:id="@+id/lin_empty"
+            layout="@layout/view_no_timezone"
+            android:visibility="gone"/>
+    </FrameLayout>
+
 </LinearLayout>
